deployments/production/template-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: template-3
  name: template-3-service
spec:
  selector:
    app: template-3
  ports:
    - name: template-3-app
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-3-deployment
spec:
  selector:
    matchLabels:
      app: template-3
  replicas: 1
  template:
    metadata:
      labels:
        app: template-3
    spec:
      containers:
        - name: template-3
          image: registry.digitalocean.com/fabs/template-3:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: fabs
