deployments/production/template-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-3-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - template-3.cclanders.site
      secretName: template-3-tls
  rules:
    - host: template-3.cclanders.site
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: template-3-service
                port:
                  number: 80
  ingressClassName: nginx
